fix: build against jvm21
- fix: build against embedded jdk sources needs `--enable-preview`
  when built against jvm21

- fix: add `-Djava.security.manager=allow` to fix security manager
  tests under modern java

Fixes and closes google/guava#7065

Signed-off-by: Sam Gammon <sam@elide.ventures>